--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
         </div>
     </div>
 
-    <script type="text/JavaScript" src="scrtipt.js"></script>
+    <script type="text/JavaScript" src="myscript.js"></script>
 </body>
 </html>
